Changed property names for number of sickdays and added new sickday properties. Another step on claims longer than 14 days.

--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -1740,6 +1740,11 @@ date-padding2 {
     padding-left: 5px;
 }
 
+.form-group-subheading2 {
+    font-size: 14px;
+    padding-left: 5px;
+}
+
 .form-group-div-frame {
     border: 1px solid;
     border-color: #c6bdbd;
