--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -105,10 +105,10 @@
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.FirstClaimDate)
+                                @Html.DisplayFor(modelItem => item.FirstClaimDayShort)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastClaimDate)
+                                @Html.DisplayFor(modelItem => item.LastClaimDayShort)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
@@ -202,10 +202,10 @@
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.FirstClaimDate)
+                                @Html.DisplayFor(modelItem => item.FirstClaimDayShort)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastClaimDate)
+                                @Html.DisplayFor(modelItem => item.LastClaimDayShort)
                             </td>
                             @*<td>
                                     @Html.DisplayFor(modelItem => item.NumberOfSickDays)
@@ -306,10 +306,10 @@
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.FirstClaimDate)
+                                @Html.DisplayFor(modelItem => item.FirstClaimDayShort)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastClaimDate)
+                                @Html.DisplayFor(modelItem => item.LastClaimDayShort)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
