--- a/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
@@ -108,10 +108,10 @@
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                                @Html.DisplayFor(modelItem => item.FirstClaimDayShort)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                                @Html.DisplayFor(modelItem => item.LastClaimDayShort)
                             </td>
                             @*<td>
                                     @Html.DisplayFor(modelItem => item.NumberOfSickDays)
@@ -215,10 +215,10 @@
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                                @Html.DisplayFor(modelItem => item.FirstClaimDayShort)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                                @Html.DisplayFor(modelItem => item.LastClaimDayShort)
                             </td>
                             @*<td>
                                     @Html.DisplayFor(modelItem => item.NumberOfSickDays)
@@ -325,10 +325,10 @@
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                                @Html.DisplayFor(modelItem => item.FirstClaimDayShort)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                                @Html.DisplayFor(modelItem => item.LastClaimDayShort)
                             </td>
                             @*<td>
                                     @Html.DisplayFor(modelItem => item.NumberOfSickDays)
