--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -106,10 +106,10 @@
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                                @Html.DisplayFor(modelItem => item.FirstClaimDayShort)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                                @Html.DisplayFor(modelItem => item.LastClaimDayShort)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
@@ -207,10 +207,10 @@
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                                @Html.DisplayFor(modelItem => item.FirstClaimDayShort)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                                @Html.DisplayFor(modelItem => item.LastClaimDayShort)
                             </td>
                             @*<td>
                                 @Html.DisplayFor(modelItem => item.NumberOfSickDays)
@@ -307,10 +307,10 @@
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                                @Html.DisplayFor(modelItem => item.FirstClaimDayShort)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                                @Html.DisplayFor(modelItem => item.LastClaimDayShort)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
