--- a/Sjuklöner/Views/Claims/Create4.cshtml
+++ b/Sjuklöner/Views/Claims/Create4.cshtml
@@ -292,6 +292,12 @@
                 idx++;
             }
         });
+
+        var doctorscertificateval = document.getElementById('doctors-certificate-val');
+        var numberofsickdays = parseInt(document.getElementById('numberofsickdays').value);
+        if (numberofsickdays > 7 && !@Json.Encode(Model.DoctorsCertificateExists) && document.getElementById("DoctorsCertificate").value == "") {
+            doctorscertificateval.innerHTML = "Avsaknad av läkarintyg efter sjukdag 7 leder till reducerad ersättning.";
+        }
     });
 
     function checkErrors() {
@@ -307,7 +313,6 @@
             timereportregassistantval.innerHTML = "";
         }
         var numberofsickdays = parseInt(document.getElementById('numberofsickdays').value);
-
         if (numberofsickdays > 7 && document.getElementById("DoctorsCertificate").value != "") {
                 doctorscertificateval.innerHTML = "";
         }
@@ -337,9 +342,9 @@
         }
         var numberofsickdays = parseInt(document.getElementById('numberofsickdays').value);
 
-        if (numberofsickdays > 7 && !@Json.Encode(Model.DoctorsCertificateExists) && document.getElementById("DoctorsCertificate").value == "") {
+        @*if (numberofsickdays > 7 && !@Json.Encode(Model.DoctorsCertificateExists) && document.getElementById("DoctorsCertificate").value == "") {
             doctorscertificateval.innerHTML = "Läkarintyg saknas.";
-        }
+        }*@
         var idx = 0;
         var timereportsstandin = document.getElementsByClassName("timereportstandin");
         var timereportexistsarray = @Html.Raw(Json.Encode(Model.TimeReportStandInExists));
@@ -365,15 +370,15 @@
             idx++;
         }
 
-        if (!validationErrorFound) {
-            //number of sickdays needs to be retrieved in order to figure out if doctors certificate shall be validated
-            var numberofsickdays = parseInt(document.getElementById('numberofsickdays').value);
-            if (numberofsickdays > 7) {
-                if (doctorscertificateval.innerHTML != "") {
-                    validationErrorFound = true;
-                }
-            }
-        }
+        //if (!validationErrorFound) {
+        //    //number of sickdays needs to be retrieved in order to figure out if doctors certificate shall be validated
+        //    var numberofsickdays = parseInt(document.getElementById('numberofsickdays').value);
+        //    if (numberofsickdays > 7) {
+        //        if (doctorscertificateval.innerHTML != "") {
+        //            validationErrorFound = true;
+        //        }
+        //    }
+        //}
 
         if (!validationErrorFound) {
             return true;
